new study in the text, several minor modifications

--- a/mSystems/rev/mSys_MAIN_rev.tex
+++ b/mSystems/rev/mSys_MAIN_rev.tex
@@ -260,6 +260,7 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 \bibitem{LEA} {\bf Faith JJ, Guruge JL, Charbonneau M, Subramanian S, Seedorf H, Goodman AL, Clemente JC, Knight R, Heath AC, Leibel RL, Rosenbaum M, Gordon JI.} 2013. The long-term stability of the human gut microbiota. Science {\bf 341}:1237439.
 \bibitem{kwashiorkor} {\bf Smith MI, Yatsunenko T, Manary MJ, Trehan I, Mkakosya R, Cheng J, Kau AL, Rich SS, Concannon P, Mychaleckyj JC, Liu J, Houpt E, Li J V, Holmes E, Nicholson J, Knights D, Ursell LK, Knight R, Gordon JI.} 2013. Gut microbiomes of Malawian twin pairs discordant for kwashiorkor. Science {\bf 339}:548–54.
 \bibitem{diet} {\bf David LA, Maurice CF, Carmody RN, Gootenberg DB, Button JE, Wolfe BE, Ling A V, Devlin AS, Varma Y, Fischbach MA, Biddinger SB, Dutton RJ, Turnbaugh PJ.} 2014. Diet rapidly and reproducibly alters the human gut microbiome. Nature {\bf 505}:559–63.
+\bibitem{hostlife} {\bf David LA, Materna AC, Friedman J, Campos-Baptista MI, Blackburn MC, Perrotta A, Erdman SE, Alm EJ.} 2014. Host lifestyle affects human microbiota on daily timescales. Genome Biol {\bf 15}:R89.
 % <- END main studies
 \bibitem{stat} {\bf Jørgensen B, Martinez JR, Tsao M.} 1994. Asymptotic behaviour of the variance function. Scand J Stat {\bf 21}:223–243.
 \bibitem{convergence1} {\bf Fronczak A, Fronczak P.} 2010. Origins of Taylor’s power law for fluctuation scaling in complex systems. Phys Rev E {\bf 81}:066112.
@@ -275,7 +276,9 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 \bibitem {koenig} {\bf Koenig JE, Spor A, Scalfone N, Fricker AD, Stombaugh J, Knight R, Angenent LT, Ley RE.} 2011. Succession of microbial consortia in the developing infant gut microbiome. Proc Natl Acad Sci {\bf 108}:4578–4585.
 \bibitem {FD} {\bf Weber, J.} 1956. Fluctuation Dissipation Theorem. Phys. Rev. {\bf 101}:1620-6
 \bibitem {sislands1} {\bf Ng SC, Lam EFC, Lam TTY, Chan Y, Law W, Tse PCH, Kamm M a, Sung JJY, Chan FKL, Wu JCY.} 2013. Effect of probiotic bacteria on the intestinal microbiota in irritable bowel syndrome. J Gastroenterol Hepatol {\bf 28}:1624–31.
-\bibitem {sislands2} {\bf Carroll IM, Ringel-Kulka T, Siddle JP, Ringel Y.} 2012. Alterations in composition and diversity of the intestinal microbiota in patients with diarrhea-predominant irritable bowel syndrome. Neurogastroenterol Motil {\bf 24}:521-30\bibitem {sislands3} {\bf Xu D, Gao J, Gillilland M, Wu X, Song I, Kao JY, Owyang C.} 2014. Rifaximin alters intestinal bacteria and prevents stress-induced gut inflammation and visceral hyperalgesia in rats. Gastroenterology {\bf 146}:484–496.e4.\bibitem {sislands4} {\bf Rooks MG, Veiga P, Wardwell-scott LH, Tickle T, Segata N, Michaud M, Gallini CA, Beal C, van Hylckama-Vlieg JET, Ballal SA, Morgan XC, Glickman JN, Gevers D, Huttenhower C, Garrett WS, Hylckama-vlieg JET Van, Ballal SA, Morgan XC, Glickman JN, Gevers D, Huttenhower C, Garrett WS.} 2014. Gut microbiome composition and function in experimental colitis during active disease and treatment-induced remission. ISME J {\bf 8}:1403–17.
+\bibitem {sislands2} {\bf Carroll IM, Ringel-Kulka T, Siddle JP, Ringel Y.} 2012. Alterations in composition and diversity of the intestinal microbiota in patients with diarrhea-predominant irritable bowel syndrome. Neurogastroenterol Motil {\bf 24}:521-30
+\bibitem {sislands3} {\bf Xu D, Gao J, Gillilland M, Wu X, Song I, Kao JY, Owyang C.} 2014. Rifaximin alters intestinal bacteria and prevents stress-induced gut inflammation and visceral hyperalgesia in rats. Gastroenterology {\bf 146}:484–496.e4.
+\bibitem {sislands4} {\bf Rooks MG, Veiga P, Wardwell-scott LH, Tickle T, Segata N, Michaud M, Gallini CA, Beal C, van Hylckama-Vlieg JET, Ballal SA, Morgan XC, Glickman JN, Gevers D, Huttenhower C, Garrett WS, Hylckama-vlieg JET Van, Ballal SA, Morgan XC, Glickman JN, Gevers D, Huttenhower C, Garrett WS.} 2014. Gut microbiome composition and function in experimental colitis during active disease and treatment-induced remission. ISME J {\bf 8}:1403–17.
 \bibitem {tikhonov} {\bf  Tikhonov M.} 2016. Community-level cohesion without cooperation. Elife {\bf 5}. 
 
 %% M&M
