Minor modifications and update Fig2 source scripts&data
Changes to be committed:
	modified:   ../README.md
	modified:   figs/Fig2/ellipse.m
	modified:   figs/Fig2/ellipsedata.txt
	modified:   rev/mSys_MAIN_rev.pdf
	modified:   rev/mSys_MAIN_rev.tex
	modified:   rev/mSys_discussion_rev.tex

--- a/mSystems/rev/mSys_MAIN_rev.tex
+++ b/mSystems/rev/mSys_MAIN_rev.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{REVISION draft A}
+\newcommand\releasecode{REVISION draft B}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -307,6 +307,8 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 \caption{Taylor parameters for the kwashiorkor part of the discordant twins\cite{kwashiorkor}. This is a continuation of Supplementary Table S\ref{tab:DH}. The population of healthy twins is characterized by $\bar{V} = 0.25 \pm 0.10, \bar{\beta} = 0.863 \pm 0.028$.}\label{tab:DK}
 
 \caption{Taylor parameters for individuals with different degrees of overweight and obesity\cite{LEA}. Healthy people in this study, whom were not obese, are characterized by $\bar{V} = 0.19 \pm 0.06, \bar{\beta} = 0.806 \pm 0.034$.} 
+
+\caption{\todo{Taylor parameters for individuals with ...\cite{hostlife}. T..., are characterized by (UPDATE THIS->) $\bar{V} = 0.19 \pm 0.06, \bar{\beta} = 0.806 \pm 0.034$.}} 
 \end{table}
 
 \end{document}
