Update supplementary, Figure 2 and various minor enhancements
Changes to be committed:
	modified:   rev/figs/Fig2.eps
	new file:   rev/figs/Fig2/Fig2.pdf
	new file:   rev/figs/Fig2/Fig2.svg
	new file:   rev/figs/Fig2/README
	new file:   rev/figs/Fig2/ellipse.m
	new file:   rev/figs/Fig2/ellipsedata.txt
	new file:   rev/figs/Fig2/errorbarxy.m
	new file:   rev/figs/supfig_HLS_xWSummary.eps
	new file:   rev/figs/supfig_HLS_xWSummary.pdf
	modified:   rev/mSys_MAIN_rev.pdf
	modified:   rev/mSys_MAIN_rev.tex
	modified:   rev/mSys_discussion_rev.tex
	new file:   rev/mSys_suppl_rev.pdf
	modified:   rev/mSys_suppl_rev.tex

--- a/mSystems/rev/mSys_MAIN_rev.tex
+++ b/mSystems/rev/mSys_MAIN_rev.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{REVISION draft B}
+\newcommand\releasecode{REVISION draft C}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -300,7 +300,7 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 
 \caption{Taylor parameters for individuals taking antibiotics\cite{antibiotic}. Prior to antibiotics intake, the population sampled is described by $\bar{V} = 0.12 \pm 0.05, \bar{\beta} = 0.75 \pm 0.04$.}
 
-\caption{Taylor parameters for persons diagnosed with irritable bowel syndrome (IBS)\cite{IBS}. Healthy individuals sampled in this study are characterized by $\bar{V} = 0.134 \pm 0.009, \bar{\beta} = 0.691 \pm 0.025$.}
+\caption{Taylor parameters for persons diagnosed with irritable bowel syndrome (IBS)\cite{IBS}. Healthy individuals sampled in this study are characterized by $\bar{V} = 0.135 \pm 0.010, \bar{\beta} = 0.692 \pm 0.024$.}
 
 \caption{Taylor parameters for the healthy subject of the discordant twins\cite{kwashiorkor}. This table continues in Supplementary Table S\ref{tab:DK}. The population of healthy twins is characterized by $\bar{V} = 0.25 \pm 0.10, \bar{\beta} = 0.863 \pm 0.028$.}\label{tab:DH}
 
@@ -308,9 +308,7 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 
 \caption{Taylor parameters for individuals with different degrees of overweight and obesity\cite{LEA}. Healthy people in this study, whom were not obese, are characterized by $\bar{V} = 0.19 \pm 0.06, \bar{\beta} = 0.806 \pm 0.034$.} 
 
-\caption{\todo{Taylor parameters for individuals with ...\cite{hostlife}. T..., are characterized by (UPDATE THIS->) $\bar{V} = 0.19 \pm 0.06, \bar{\beta} = 0.806 \pm 0.034$.}} 
+\caption{Taylor parameters for special intervals concerning gut microbiota in the host lifestyle study\cite{hostlife}. The healthy and quotidian periods are characterized by $\bar{V} = 0.25 \pm 0.09, \bar{\beta} = 0.777 \pm 0.025$.} 
 \end{table}
 
 \end{document}
-
-
