--- a/mSystems/rev/mSys_suppl_rev.tex
+++ b/mSystems/rev/mSys_suppl_rev.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{final}
+\newcommand\releasecode{REVISION draft C}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -27,9 +27,9 @@
 \geometry{textheight=22.5cm} % 22cm for single-space, 22.5cm for double-space
 
 % watermarks (time consuming!)
-\newwatermark[allpages,color=PineGreen!4,angle=45,scale=7,xpos=-40,ypos=0]{submitted}
-\newwatermark[allpages,color=PineGreen!12,angle=0,scale=1,xpos=0,ypos=137]{
-\emph{mSystems} \LaTeX\ manuscript \releasecode\ submission}
+\newwatermark[allpages,color=Mulberry!4,angle=45,scale=7,xpos=-40,ypos=0]{REVISION}
+\newwatermark[allpages,color=Mulberry!12,angle=0,scale=1,xpos=0,ypos=137]{
+\emph{mSystems} \LaTeX\ manuscript \releasecode}
 
 % helps to keep figures from being orphaned on a page by themselves
 \renewcommand{\topfraction}{0.85}
@@ -115,6 +115,7 @@
 \author[1,2,3,$*$]{Daniel Martínez-Martínez}
 \author[2]{Manuel Peña}
 \author[1,2]{César Gracia}
+\author[1]{Teresa Rubio}
 \author[1,3,4,5]{Amparo Latorre}
 \author[1,3,4,5,\#]{Andrés Moya}
 \author[1,2,\#]{Carlos P. Garay}
@@ -191,15 +192,15 @@
 \clearpage
 
 \begin{table}
-\caption{Taylor parameters for persons diagnosed with irritable bowel syndrome (IBS)\cite{IBS}. Healthy individuals sampled in this study are characterized by $\bar{V} = 0.134 \pm 0.009, \bar{\beta} = 0.691 \pm 0.025$.}
+\caption{Taylor parameters for persons diagnosed with irritable bowel syndrome (IBS)\cite{IBS}. Healthy individuals sampled in this study are characterized by $\bar{V} = 0.135 \pm 0.010, \bar{\beta} = 0.692 \pm 0.024$.}
  
   \begin{center}
     \begin{tabular}{ccccccc}
 	    \hline
 		Metadata&V&$\beta$&$\bar{R}^2$&&V$_{st}$&$\beta_{st}$\\
 		\hline
-		IBS&$0.204 \pm 0.034$&$0.739 \pm 0.029$&$0.916$&&$7.6 \pm 3.7$&$1.9 \pm 1.2$\\
-		IBS&$0.35 \pm 0.05$&$0.793 \pm 0.023$&$0.935$&&$23.1 \pm 5.9$&$4.0 \pm 0.9$\\
+		IBS (minor)&$0.205 \pm 0.034$&$0.740 \pm 0.029$&$0.917$&&$6.9 \pm 3.3$&$2.0 \pm 1.2$\\
+		IBS (severe)&$0.35 \pm 0.06$&$0.793 \pm 0.025$&$0.934$&&$21 \pm 6$&$4.2 \pm 1.0$\\
 	     \hline
 	     \hline
     \end{tabular}
@@ -304,12 +305,33 @@
 
 \clearpage
 
+\begin{table}
+\caption{Taylor parameters for special intervals concerning gut microbiota in the host lifestyle study\cite{hostlife}. The healthy and quotidian periods are characterized by $\bar{V} = 0.25 \pm 0.09, \bar{\beta} = 0.777 \pm 0.025$.}
+ 
+  \begin{center}
+    \begin{tabular}{ccccccc}
+	    \hline
+		Metadata&V&$\beta$&$\bar{R}^2$&&V$_{st}$&$\beta_{st}$\\
+		\hline
+		HLS (abroad)&$0.51 \pm 0.06$&$0.820 \pm 0.012$&$0.928$&&$2.8 \pm 0.6$&$1.7 \pm 0.5$\\
+		HLS (infection)&$0.49 \pm 0.08$&$0.828 \pm 0.018$&$0.923$&&$2.6 \pm 0.9$&$2.0 \pm 0.7$\\
+		HLS (after infection)&$0.36 \pm 0.05$&$0.776 \pm 0.015$&$0.922$&&$1.1 \pm 0.6$&$-0.0 \pm 0.6$\\
+	     \hline
+	     \hline
+    \end{tabular}
+  \end{center}
+  \label{tab:IBS}
+\end{table}
+
+\clearpage
+
 \begin{thebibliography}{9}
 \bibitem{diet} {\bf David LA, Maurice CF, Carmody RN, Gootenberg DB, Button JE, Wolfe BE, Ling A V, Devlin AS, Varma Y, Fischbach MA, Biddinger SB, Dutton RJ, Turnbaugh PJ.} 2014. Diet rapidly and reproducibly alters the human gut microbiome. Nature {\bf 505}:559–63.
 \bibitem{antibiotic} {\bf Dethlefsen L, Relman DA.} 2011. Incomplete recovery and individualized responses of the human distal gut microbiota to repeated antibiotic perturbation. Proc Natl Acad Sci {\bf108}:4554–61.
 \bibitem{IBS} {\bf Durbán A, Abellán JJ, Jiménez-Hernández N, Artacho A, Garrigues V, Ortiz V, Ponce J, Latorre A, Moya A.} 2013. Instability of the faecal microbiota in diarrhoea-predominant irritable bowel syndrome. FEMS Microbiol Ecol {\bf 86}:581–589.
 \bibitem{kwashiorkor} {\bf Smith MI, Yatsunenko T, Manary MJ, Trehan I, Mkakosya R, Cheng J, Kau AL, Rich SS, Concannon P, Mychaleckyj JC, Liu J, Houpt E, Li J V, Holmes E, Nicholson J, Knights D, Ursell LK, Knight R, Gordon JI.} 2013. Gut microbiomes of Malawian twin pairs discordant for kwashiorkor. Science {\bf 339}:548–54.
 \bibitem{LEA} {\bf Faith JJ, Guruge JL, Charbonneau M, Subramanian S, Seedorf H, Goodman AL, Clemente JC, Knight R, Heath AC, Leibel RL, Rosenbaum M, Gordon JI.} 2013. The long-term stability of the human gut microbiota. Science {\bf 341}:1237439.
+\bibitem{hostlife} {\bf David LA, Materna AC, Friedman J, Campos-Baptista MI, Blackburn MC, Perrotta A, Erdman SE, Alm EJ.} 2014. Host lifestyle affects human microbiota on daily timescales. Genome Biol {\bf 15}:R89.
 \end{thebibliography}
 \end{document}
 
