Minor changes which lead to REVISION draft E
Changes to be committed:
	modified:   rev/mSys_MAIN_rev.pdf
	modified:   rev/mSys_MAIN_rev.tex
	modified:   rev/mSys_discussion_rev.tex
	modified:   rev/mSys_suppl_rev.pdf
	modified:   rev/mSys_suppl_rev.tex

--- a/mSystems/rev/mSys_discussion_rev.tex
+++ b/mSystems/rev/mSys_discussion_rev.tex
@@ -10,7 +10,7 @@ By solving the Langevin differential equation, we can obtain a phase diagram whe
 	\centering
 	%\vspace*{-10mm} % Corrects overbox of the figures
 	\includegraphics[width=0.99\textwidth]{figs/supfig_HLS_xWSummary.eps}
-	\caption{Taylor's law parameter space for intervals concerning gut microbiota in the host lifestyle study\cite{hostlife}. We observe that the subject B, who suffered a Salmonella infection during the experiment, had a relevant shift in the parameters from \emph{\_before} to \emph{\_infection} and a final recovery from the perturbed state to \emph{\_afterinfec}. The subject A also had a shift in the variability from \emph{\_before} to \emph{\_abroad} and back to \emph{\_returned}.}
+	\caption{Taylor's law parameter space for intervals concerning gut microbiota in the host lifestyle study\cite{hostlife}. We observe that the subject B, who suffered a Salmonella infection during the experiment, had a relevant shift in the parameters from \emph{\_before} to \emph{\_infection} and a final recovery from the perturbed state to \emph{\_afterinfec}, which lays in the parameters area compatible with the healthy and stable intervals (see Supplementary Table S7). The subject A also had a shift in the variability from \emph{\_before} to \emph{\_abroad} and back to \emph{\_returned}, also in the proximity zone of healthy and stable periods.}
 	\label{supfig:HLS_xWSummary}
 \end{supfig}
  
