--- a/mSystems/rev/mSys_suppl_rev.tex
+++ b/mSystems/rev/mSys_suppl_rev.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{REVISION draft C}
+\newcommand\releasecode{REVISION draft E}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -320,7 +320,7 @@
 	     \hline
     \end{tabular}
   \end{center}
-  \label{tab:IBS}
+  \label{tab:HLS}
 \end{table}
 
 \clearpage
